[package]
name = "meshpit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive"] }
p2panda-core = { git = "https://github.com/p2panda/p2panda", rev = "b296805a4f3daab3d4e17c28ae8e3d927ed8b007" }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda", rev = "b296805a4f3daab3d4e17c28ae8e3d927ed8b007", features = ["mdns"] }
p2panda-net = { git = "https://github.com/p2panda/p2panda", rev = "b296805a4f3daab3d4e17c28ae8e3d927ed8b007" }
p2panda-store = { git = "https://github.com/p2panda/p2panda", rev = "b296805a4f3daab3d4e17c28ae8e3d927ed8b007" }
p2panda-stream = { git = "https://github.com/p2panda/p2panda", rev = "b296805a4f3daab3d4e17c28ae8e3d927ed8b007" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda", rev = "b296805a4f3daab3d4e17c28ae8e3d927ed8b007", features = ["log-sync"] }
serde = "1.0.217"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
