[package]
name = "meshpit"
version = "0.1.0"
authors = [
  "adz <x12@adz.garden>",
]
description = "Turns any program sending and receiving UDP to a full p2p application"
repository = "https://github.com/adzialocha/meshpit"
edition = "2021"
license = "MIT"
publish = false

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
clap = { version = "4.5.24", features = ["derive"] }
hex = "0.4.3"
iroh-gossip = "0.28.1"
p2panda-core = { git = "https://github.com/p2panda/p2panda", rev = "9c05ba85eb279eb20b1109f4860abd83ed0d5e58" }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda", rev = "9c05ba85eb279eb20b1109f4860abd83ed0d5e58", features = ["mdns"] }
p2panda-net = { git = "https://github.com/p2panda/p2panda", rev = "9c05ba85eb279eb20b1109f4860abd83ed0d5e58" }
p2panda-store = { git = "https://github.com/p2panda/p2panda", rev = "9c05ba85eb279eb20b1109f4860abd83ed0d5e58" }
p2panda-stream = { git = "https://github.com/p2panda/p2panda", rev = "9c05ba85eb279eb20b1109f4860abd83ed0d5e58" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda", rev = "9c05ba85eb279eb20b1109f4860abd83ed0d5e58", features = ["log-sync"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["fs"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
